[package]
name = "lock"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["ticket"]
ticket = []

[dependencies]
cfg-if = "1.0.0"

# Bare-metal mode on x86_64
[target.'cfg(target_arch = "x86_64")'.dependencies]
raw-cpuid = "10.2.0"
x86_64 = "0.14.6"

# Bare-metal mode on riscv64
[target.'cfg(target_arch = "riscv64")'.dependencies]
riscv = "0.8"

# LibOS mode
[target.'cfg(not(target_os = "none"))'.dependencies]
spin = "0.9"

[target.'cfg(feature = "async")'.dependencies]

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
lazy_static = "1.4"